Few changes made

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav ms-auto text-center">
-                            <a class="nav-link" href="#"><b>Home</b></a>
-                            <a class="nav-link" href="#"><b>Product</b></a>
-                            <a class="nav-link" href="#"><b>About us</b></a>
-                            <a class="nav-link" href="#"><b>Contact us</b></a>
+                            <a class="nav-link mx-3" href="#"><b>Home</b></a>
+                            <a class="nav-link mx-3" href="#"><b>Product</b></a>
+                            <a class="nav-link mx-3" href="#"><b>About us</b></a>
+                            <a class="nav-link mx-3" href="#"><b>Contact us</b></a>
                         </div>
                     </div>
                 </div>
@@ -41,7 +41,7 @@
         </section>
         <!--Navigation Bar section ends-->
 
-        <section id="banner" class="container mt-5">
+        <section id="banner" class="container mt-5 mb-5">
             <!--First Section Starts-->
             <div class="row">
                 <div class="col-12 col-md-6 mt-5">
@@ -64,7 +64,7 @@
 
     <main>
         <!--WOMEN'S JACKET section starts-->
-        <section class="container mt-5">
+        <section class="container mt-5 mb-5">
             <h1 class="font-color-heading">WOMEN'S JACKET</h1>
             <div class="row row-cols-md-3 g-4">
                 <div class="col">
@@ -166,7 +166,7 @@
                         </div>
                         <div class="card-body">
                             <h5 class="card-title">
-                                <b>Leather Jacket</b>
+                                <b>Casual Jacket</b>
                             </h5>
                             <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting
                                 industry.
@@ -187,7 +187,7 @@
                         </div>
                         <div class="card-body">
                             <h5 class="card-title">
-                                <b>Casual Jacket</b>
+                                <b>Leather Jacket</b>
                             </h5>
                             <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting
                                 industry.
@@ -206,7 +206,7 @@
         <!--MEN'S JACKET section ends-->
 
         <!--Last Section Starts-->
-        <section class="container mt-5">
+        <section class="container mt-5 mb-5">
             <div class="row">
                 <div class="col-12 col-md-7 mt-5 mb-4 order-md-2">
                     <img src="./icons/XMLID_1.png" class="img-fluid" alt="">
@@ -248,13 +248,14 @@
         <!--Last Section Ends-->
 
         <!--Bonus section-->
-        <section id="bonus-section-1" class="container mt-5">
+        <section id="bonus-section-1" class="container py-5">
             <h1 class="text-center">Get <span class="orange-color-highlight">INSTANT 25%</span> Cash Back Using
-                City Bank and Eastern Bank Credit Card!</h1>
+                City Bank and Eastern Bank Credit Card!
+            </h1>
         </section>
 
         <!--Bonus section-->
-        <section id="bonus-section-2" class="container mt-5">
+        <section id="bonus-section-2" class="container">
             <div class="row p-3">
                 <div class="col mt-3">
                     <h5 class="text-center" style="color: #363958;">
